--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CarZ"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".Registration">
+        <activity android:name=".Activities.MainActivity"></activity>
+        <activity android:name=".Activities.WashServices" />
+        <activity android:name=".Activities.Registration">
+        </activity>
+        <activity android:name=".Activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
